Recursive crash fix opening refactoring assistant.

BUG:209552